<resources>
    <string name="app_name">MyResume</string>
    <string name="action_settings">Settings</string>
    <string name="retry">Retry</string>
    <string name="unable_to_fetch_data">Unable to fetch data</string>
    <string name="projects">projects</string>
    <string name="carrier_summary">Carrier Summary</string>
    <string name="summary_of_qualifications">Summary of Qualifications</string>
    <string name="project_management_tools">Project management tools</string>
    <string name="ui_testing">Unit / UI Test Tools</string>
    <string name="databases">databases</string>
    <string name="operating_system">Operating System</string>
    <string name="programming_language">Programming languages</string>
    <string name="devops_tools">Devops tools</string>
    <string name="api_tools">Api tools</string>
    <string name="scm_tools">Scm Tools</string>
    <string name="languages">Speak Languages</string>
    <string name="summary_of_skills">Summary of skills</string>
    <string name="companies_worked_with">companies worked with</string>
    <string name="designation">Designation</string>
    <string name="roles_and_responsibility">Roles and responsibility</string>
    <string name="employer_">Employer: %1$s</string>
    <string name="technology">Technology: %1$s</string>
    <string name="os">OS: %1$s</string>
    <string name="domain">Domain: %1$s</string>
    <string name="application_link">Application link: %1$s</string>
    <string name="project_description">Project description</string>
</resources>
